--- a/src/chrome/template.html
+++ b/src/chrome/template.html
@@ -1,7 +1,14 @@
 <mat-toolbar color="primary">
+  <button mat-button (click)="nav.toggle()" style="margin-right: 16px">
+    <!--<mat-icon aria-label="Menu icon">hamburger-menu</mat-icon>-->
+  Menu
+  </button>
   <span>OSCM Asynchronous Provisioning Platform</span>
 </mat-toolbar>
 
 <!--TODO Sidebar-->
+<app-nav #nav>
+  <router-outlet></router-outlet>
+</app-nav>
 
-<router-outlet></router-outlet>
+
