--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,8 +1,13 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav #sidenav mode="side" [(opened)]="opened">
-    Sidenav content
+    <ul>
+      <li>Home</li>
+      <li>APP Config</li>
+      <li>APP Config</li>
+      <li>APP Config</li>
+      <li>APP Config</li>
+    </ul>
   </mat-sidenav>
-
   <mat-sidenav-content>
     <ng-content></ng-content>
   </mat-sidenav-content>
