--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,13 +1,14 @@
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+  <mat-sidenav #sidenav mode="side" [opened]="true">
     <mat-nav-list>
-      <mat-list-item *ngFor="let link of links">
-        <a matLine href="#">{{ link }}</a>
-        <button mat-icon-button (click)="showInfo(link)">
-        <mat-icon>info</mat-icon>
-     </button>
-  </mat-list-item>
-</mat-nav-list>
+      <a mat-list-item
+         *ngFor="let link of links"
+         [routerLink]="link.route"
+         routerLinkActive="active-link">
+        <mat-icon mat-list-icon color="primary" style="margin-left: 4px">{{ link.icon }}</mat-icon>
+        <a matLine *ngIf="!collapsed">{{ link.description }}</a>
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <ng-content></ng-content>
