--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,11 +1,12 @@
-<mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav mode="side" [opened]="true">
+<mat-sidenav-container style="background: #f2f2f2">
+  <mat-sidenav #sidenav mode="side" [opened]="true" style="background: #f2f2f2">
     <mat-nav-list>
       <a mat-list-item
          *ngFor="let link of links"
          [routerLink]="link.route"
-         routerLinkActive="active-link">
-        <mat-icon mat-list-icon color="primary" style="margin-left: 4px">{{ link.icon }}</mat-icon>
+         routerLinkActive="active-link"
+         class="app-nav-list-item">
+        <mat-icon mat-list-icon color="primary">{{ link.icon }}</mat-icon>
         <a matLine *ngIf="!collapsed">{{ link.description }}</a>
       </a>
     </mat-nav-list>
