--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,14 +1,6 @@
 <mat-sidenav-container style="background: #f2f2f2">
   <mat-sidenav #sidenav mode="side" [opened]="true" style="background: #f2f2f2">
     <mat-nav-list>
-<<<<<<< HEAD
-      <mat-list-item *ngFor="let link of links">
-        <a matLine href="#">{{ link }}</a>
-        <button mat-icon-button (click)="showInfo(link)">
-          <mat-icon>info</mat-icon>
-        </button>
-      </mat-list-item>
-=======
       <a mat-list-item
          *ngFor="let link of links"
          [routerLink]="link.route"
@@ -17,8 +9,24 @@
         <mat-icon mat-list-icon color="primary">{{ link.icon }}</mat-icon>
         <a matLine *ngIf="!collapsed">{{ link.description }}</a>
       </a>
->>>>>>> b779e95b31318e2d8a9cd6107edc1ce3de8c2129
     </mat-nav-list>
+
+
+    <mat-divider></mat-divider>
+
+    <div class="app-nav-header">CONTROLLER CONFIGURATION</div>
+
+    <mat-nav-list>
+      <a mat-list-item
+         *ngFor="let link of controllerLinks"
+         [routerLink]="link.route"
+         routerLinkActive="active-link"
+         class="app-nav-list-item">
+        <mat-icon mat-list-icon color="primary">{{ link.icon }}</mat-icon>
+        <a matLine *ngIf="!collapsed">{{ link.description }}</a>
+      </a>
+    </mat-nav-list>
+
   </mat-sidenav>
   <mat-sidenav-content>
     <ng-content></ng-content>
