--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,21 +1,31 @@
 <mat-sidenav-container style="background: #f2f2f2">
-  <mat-sidenav #sidenav mode="side" [opened]="true" style="background: #f2f2f2">
+  <mat-sidenav #sidenav mode="side" [opened]="true" style="background: #f2f2f2; width: 280px">
+    
     <mat-nav-list>
       <a mat-list-item
-         *ngFor="let link of links"
+         routerLink="home"
+         routerLinkActive="active-link"
+         class="app-nav-list-item">
+        <mat-icon mat-list-icon color="primary">home</mat-icon>
+        <a matLine *ngIf="!collapsed">Home</a>
+      </a>
+    </mat-nav-list>
+
+    <mat-divider></mat-divider>
+    <div class="app-nav-header">ADMINISTRATION</div>
+    <mat-nav-list>
+      <a mat-list-item
+         *ngFor="let link of adminLinks"
          [routerLink]="link.route"
          routerLinkActive="active-link"
          class="app-nav-list-item">
         <mat-icon mat-list-icon color="primary">{{ link.icon }}</mat-icon>
-        <a matLine *ngIf="!collapsed">{{ link.description }}</a>
+        <a matLine *ngIf="!collapsed">{{ link.label }}</a>
       </a>
     </mat-nav-list>
 
-
     <mat-divider></mat-divider>
-
     <div class="app-nav-header">CONTROLLER CONFIGURATION</div>
-
     <mat-nav-list>
       <a mat-list-item
          *ngFor="let link of controllerLinks"
@@ -23,7 +33,7 @@
          routerLinkActive="active-link"
          class="app-nav-list-item">
         <mat-icon mat-list-icon color="primary">{{ link.icon }}</mat-icon>
-        <a matLine *ngIf="!collapsed">{{ link.description }}</a>
+        <a matLine *ngIf="!collapsed">{{ link.label }}</a>
       </a>
     </mat-nav-list>
 
