Minor styling updates

--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container style="background: #f2f2f2">
-  <mat-sidenav #sidenav mode="side" [opened]="true" style="background: #f2f2f2; width: 280px">
+  <mat-sidenav #sidenav mode="side" [opened]="true" style="background: #f2f2f2">
     
     <mat-nav-list>
       <a mat-list-item
