Stretch view to fill available space

--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container style="background: #f2f2f2">
+<mat-sidenav-container style="background: #f2f2f2; position: fixed; width: 100%; height: 100%">
   <mat-sidenav mode="side"
                [opened]="true"
                style="background: #f2f2f2"
