--- a/src/chrome/nav/template.html
+++ b/src/chrome/nav/template.html
@@ -27,7 +27,7 @@
     </mat-nav-list>
 
     <mat-divider style="margin-left: 8px"></mat-divider>
-    <div class="app-nav-header" *ngIf="!collapsed">CONTROLLER CONFIGURATION</div>
+    <div class="app-nav-header" *ngIf="!collapsed" style="white-space: nowrap">CONTROLLER CONFIGURATION</div>
     <mat-nav-list>
       <a mat-list-item
          *ngFor="let link of controllerLinks"
