Add shadow to the toolbar

--- a/src/chrome/template.html
+++ b/src/chrome/template.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" class="app-toolbar">
     <button mat-icon-button (click)="nav.toggle()" style="margin-right: 16px">
       <mat-icon aria-label="Menu icon">menu</mat-icon>
     </button>
