Add instances view

--- a/src/instances/template.html
+++ b/src/instances/template.html
@@ -1,6 +1,6 @@
 <mat-card style="margin: 30px">
+  <mat-card-title>Instances</mat-card-title>
   <mat-card-content>
-    <h2>Instances</h2>
     <div *ngFor="let instance of instances">
       {{ instance.id }} - {{ instance.organizationName }}
     </div>
