--- a/src/instances/template.html
+++ b/src/instances/template.html
@@ -1,8 +1,18 @@
 <mat-card style="margin: 30px">
   <mat-card-title>Instances</mat-card-title>
   <mat-card-content>
-    <div *ngFor="let instance of instances">
-      {{ instance.id }} - {{ instance.organizationName }}
-    </div>
+      <table mat-table [dataSource]=dataSource matSort style="width: 100%">
+        <ng-container [matColumnDef]="displayedColumns[0]">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let instance"> {{instance.id}} </td>
+        </ng-container>
+        <ng-container [matColumnDef]="displayedColumns[1]">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Organization Name </th>
+            <td mat-cell *matCellDef="let instance"> {{instance.organizationName}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
