--- a/src/instances/template.html
+++ b/src/instances/template.html
@@ -1,10 +1,12 @@
-<mat-card style="margin: 30px">
-  <mat-card-title>Instances</mat-card-title>
-  <mat-card-content>
-    <table mat-table [dataSource]=dataSource matSort style="width: 100%">
+<app-card role="table" [initialized]="isInitialized">
+  <div title>Instances</div>
+  <div content>
+    <table mat-table [dataSource]=dataSource matSort>
       <ng-container [matColumnDef]="displayedColumns[0]">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
-        <td mat-cell *matCellDef="let instance"> {{instance.instanceId}}</td>
+        <td mat-cell *matCellDef="let instance">
+          <a [routerLink]="[instance.id]">{{instance.instanceId}}</a>
+        </td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[1]">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Subscription ID</th>
@@ -15,26 +17,14 @@
         <td mat-cell *matCellDef="let instance"> {{instance.controllerId}}</td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[3]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Organization Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Organization</th>
         <td mat-cell *matCellDef="let instance"> {{instance.organizationName}}</td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[4]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Attributes</th>
-        <td mat-cell *matCellDef="let instance">
-          <app-chips [list]="instance.attributes"></app-chips>
-        </td>
-      </ng-container>
-      <ng-container [matColumnDef]="displayedColumns[5]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Parameters</th>
-        <td mat-cell *matCellDef="let instance">
-          <app-chips [list]="instance.parameters"></app-chips>
-        </td>
-      </ng-container>
-      <ng-container [matColumnDef]="displayedColumns[6]">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
         <td mat-cell *matCellDef="let instance"> {{getStatus(instance.provisioningStatus)}}</td>
       </ng-container>
-      <ng-container [matColumnDef]="displayedColumns[7]">
+      <ng-container [matColumnDef]="displayedColumns[5]">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Created At</th>
         <td mat-cell *matCellDef="let instance"> {{instance.requestTime | date:'short'}}</td>
       </ng-container>
@@ -42,5 +32,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  </mat-card-content>
-</mat-card>
+  </div>
+</app-card>
