Add create config dialog

--- a/src/config/template.html
+++ b/src/config/template.html
@@ -14,8 +14,6 @@
   </app-card>
 </div>
 
-<!--<div fxFlex fxLayout=" end">-->
-  <!--<button mat-fab>-->
-    <!--<mat-icon aria-label="Add configuration">add</mat-icon>-->
-  <!--</button>-->
-<!--</div>-->
+<button mat-fab class="app-fab" (click)="create()">
+  <mat-icon aria-label="Add configuration">add</mat-icon>
+</button>
