Improve config view readability

--- a/src/config/create/template.html
+++ b/src/config/create/template.html
@@ -4,10 +4,10 @@
   <div>
     <mat-form-field>
       <mat-select placeholder="Select">
-        <mat-option value="aws">AWS</mat-option>
-        <mat-option value="azure">Azure</mat-option>
-        <mat-option value="openstack">OpenStack</mat-option>
-        <mat-option value="vmware">VMware</mat-option>
+        <mat-option value="ess.aws">AWS</mat-option>
+        <mat-option value="ess.azure">Azure</mat-option>
+        <mat-option value="ess.openstack">OpenStack</mat-option>
+        <mat-option value="ess.vmware">VMware</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field>
