--- a/src/config/create/template.html
+++ b/src/config/create/template.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Assign controller to organization</h2>
+<h2 mat-dialog-title>Assign the controller to an organization</h2>
 <mat-dialog-content >
   <div>Provide Organization ID and select Controller to create new assignment:</div>
   <div>
