--- a/src/instances/detail/template.html
+++ b/src/instances/detail/template.html
@@ -3,19 +3,19 @@
   <div content fxLayout="row wrap">
     <app-property>
       <div key>Controller</div>
-      <div value>{{instance?.controllerId}}</div>
+      <div value>{{getControllerName(instance?.controllerId)}}</div>
     </app-property>
     <app-property>
       <div key>Organization</div>
       <div value>{{instance?.organizationName}}</div>
     </app-property>
-    <app-property>
+    <app-property fxFlex="100">
       <div key>Attributes</div>
       <div value>
         <app-chips [list]="instance?.attributes"></app-chips>
       </div>
     </app-property>
-    <app-property>
+    <app-property fxFlex="100">
       <div key>Parameters</div>
       <div value>
         <app-chips [list]="instance?.parameters"></app-chips>
