--- a/src/config/create/template.html
+++ b/src/config/create/template.html
@@ -1,25 +1,35 @@
-<h2 mat-dialog-title>Assign the controller to an organization</h2>
-<mat-dialog-content >
-  <div>Provide Organization ID and select Controller to create new assignment:</div>
-  <div>
-    <mat-form-field>
-      <mat-select placeholder="Select">
-        <mat-option value="ess.aws">AWS</mat-option>
-        <mat-option value="ess.azure">Azure</mat-option>
-        <mat-option value="ess.openstack">OpenStack</mat-option>
-        <mat-option value="ess.vmware">VMware</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Organization ID">
-    </mat-form-field>
-  </div>
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button
-          color="primary"
-          [mat-dialog-close]="true">Save</button>
-  <button mat-button
-          color="primary"
-          [mat-dialog-close]="false">Cancel</button>
-</mat-dialog-actions>
+<form [formGroup]="form" (ngSubmit)="submit(form)">
+  <h2 mat-dialog-title>Assign the controller to an organization</h2>
+  <mat-dialog-content>
+    <div>Provide Organization ID and select Controller to create new assignment:</div>
+    <div style="padding-top: 8px">
+      <mat-form-field>
+        <mat-select placeholder="Select"
+                    formControlName="controller" required>
+          <mat-option value="ess.aws">AWS</mat-option>
+          <mat-option value="ess.azure">Azure</mat-option>
+          <mat-option value="ess.openstack">OpenStack</mat-option>
+          <mat-option value="ess.vmware">VMware</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput
+               placeholder="Organization ID"
+               formControlName="organization"
+               required>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button mat-button
+            type="submit"
+            color="primary"
+            [disabled]="!form.valid">Save
+    </button>
+    <button mat-button
+            type="button"
+            color="primary"
+            mat-dialog-close>Cancel
+    </button>
+  </mat-dialog-actions>
+</form>
