--- a/src/instances/template.html
+++ b/src/instances/template.html
@@ -13,19 +13,23 @@
         <td mat-cell *matCellDef="let instance"> {{instance.subscriptionId}}</td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[2]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Controller</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Controller</th>
         <td mat-cell *matCellDef="let instance"> {{getControllerName(instance.controllerId)}}</td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[3]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Organization</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Organization Name</th>
         <td mat-cell *matCellDef="let instance"> {{instance.organizationName}}</td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[4]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
-        <td mat-cell *matCellDef="let instance"> {{getStatus(instance.provisioningStatus)}}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Organization ID</th>
+        <td mat-cell *matCellDef="let instance"> {{instance.organizationId}}</td>
       </ng-container>
       <ng-container [matColumnDef]="displayedColumns[5]">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Created At</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <td mat-cell *matCellDef="let instance"> {{getStatus(instance.provisioningStatus)}}</td>
+      </ng-container>
+      <ng-container [matColumnDef]="displayedColumns[6]">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Creation Time</th>
         <td mat-cell *matCellDef="let instance"> {{instance.requestTime | date:'short'}}</td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
