--- a/src/config/template.html
+++ b/src/config/template.html
@@ -1,24 +1,26 @@
-<div fxLayout="column wrap" *ngIf="isInitialized; else loading">
-  <app-card *ngFor="let organizationId of orgControllersMap?.keys()">
-    <div title>Organization ({{organizationId}})</div>
-    <div content>
-      <app-property>
-        <div key>Configured controllers</div>
-        <div value>
-          <ng-container *ngFor="let controllerId of orgControllersMap?.get(organizationId); last as last">
-            {{toControllerName(controllerId)}}<ng-container *ngIf="!last">,</ng-container>
+<app-card role="table" [initialized]="isInitialized">
+  <div title>Configurations</div>
+  <div content>
+    <table mat-table [dataSource]=dataSource>
+      <ng-container matColumnDef="organization">
+        <th mat-header-cell *matHeaderCellDef>Organization ID</th>
+        <td mat-cell *matCellDef="let configuration">{{ configuration.organizationId }}</td>
+      </ng-container>
+      <ng-container matColumnDef="controllers">
+        <th mat-header-cell *matHeaderCellDef>Configured controllers</th>
+        <td mat-cell *matCellDef="let configuration">
+          <ng-container *ngFor="let controllerId of configuration?.controllers; last as last">
+            {{ toControllerName(controllerId) }}<ng-container *ngIf="!last">,</ng-container>
           </ng-container>
-        </div>
-      </app-property>
-    </div>
-  </app-card>
-</div>
-
-<ng-template #loading>
-  <div style="padding: 16px 0;">
-    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="['organization', 'controllers']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['organization', 'controllers'];"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
-</ng-template>
+</app-card>
+
 
 <button mat-fab class="app-fab" (click)="create()">
   <mat-icon aria-label="Add configuration">add</mat-icon>
