--- a/src/controller/settingdialog/template.html
+++ b/src/controller/settingdialog/template.html
@@ -1,19 +1,21 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h2 mat-dialog-title>... configuration setting</h2>
-  <mat-dialog-content>
-    <div>Provide key and value to ... configuration setting:</div>
-    <div style="padding-top: 8px">
-      <mat-form-field>
+  <h2 mat-dialog-title>{{data.action}} configuration setting</h2>
+  <mat-dialog-content fxLayout="column">
+    <div fxFlex="100">Provide key and value to {{data.action.toLowerCase()}} configuration setting:</div>
+    <div fxFlex="100" fxLayout="row" style="padding-top: 8px">
+      <mat-form-field fxFlex="100">
         <input matInput
                placeholder="Key"
                formControlName="key"
-               required>
+               required
+               [value]="data.key || ''">
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field fxFlex="100">
         <input matInput
                placeholder="Value"
                formControlName="value"
-               required>
+               required
+               [value]="data.value || ''">
       </mat-form-field>
     </div>
   </mat-dialog-content>
@@ -21,12 +23,14 @@
     <button mat-button
             type="submit"
             color="primary"
-            [disabled]="!form.valid">Save
+            [disabled]="!form.valid">
+      Save
     </button>
     <button mat-button
             type="button"
             color="primary"
-            mat-dialog-close>Cancel
+            mat-dialog-close>
+      Cancel
     </button>
   </mat-dialog-actions>
 </form>
